http://bugzilla.gnome.org/show_bug.cgi?id=361941 Slow download / Download corrupted in 0.116, fix included